--- a/styles.css
+++ b/styles.css
@@ -10,28 +10,40 @@ body {
 header {
   display: flex;
   height: 69px;
+  width: 100%;
   border-bottom: 1px solid seashell;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background-color: black;
 }
 
-img {
-  /* height: 50px; */
-  
-}
 
 nav {
+  /* float: right; */
   display: flex;
   width: 30%;
   text-decoration: underline;
-  justify-content: space-between
+  justify-content: space-between;
+
+}
+
+a {
+  color: seashell;
 }
 
 main {
+  margin-top: 39px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: ;
+  /* align-items: ; */
+}
+
+section, footer {
+  margin: 30px auto;
 }
 
 section.mission {
@@ -41,6 +53,7 @@ section.mission {
   width: 1200px;
   align-items: center;
   justify-content: center;
+  
 }
 
 div#statement {
@@ -54,17 +67,24 @@ div#statement {
 section.container-featured {
   display: flex;
   width: 1000px;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .featured-items {
   display: flex;
   width: 1000px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  
 }
 
 .box {
   height: 200px;
   width: 300px;
-  
+  margin-bottom: 10px;
+  margin-right: 30px;
 }
 
 #one {
@@ -95,4 +115,39 @@ section.container-featured {
   background-image: url("images/img-bedford-bizarre.webp");
   background-size: cover;
   background-position: center;
+}
+
+#locations {
+  width: 1200px;
+  height: 500px;
+  display: flex;
+  
+  justify-content: center;
+  flex-direction: column;
+  background-image: url("images/img-locations-background.jpeg");
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 10px;
+}
+
+#address-container {
+  display: flex;
+  justify-content:space-evenly
+}
+
+.address-box {
+  background-color: black;
+  width: 300px;
+}
+
+footer {
+  height: 200px;
+  width: 1200px;
+  align-items: center;
+}
+
+#copyright {
+  position: relative;
+  float: left;
+  margin: 20px;
 }
